Clean up for 1.17.1